# garant

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
garantapp/: manage.py
garantapp/garantapp/: asgi.py  settings.py  urls.py  wsgi.py
