[tool.poetry]
name = "garant"
version = "0.1.0"
description = ""
authors = ["Ruslan91111 <ruslan_ru911@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
